add Order System

--- a/public/html/myOrder.html
+++ b/public/html/myOrder.html
@@ -40,27 +40,18 @@
                 <script src="/javascripts/cookie.js"></script>
             </div><br><br>
             <div class="content">
-                <div class="goods" style="width:700px;" >
+                <div class="goods" style="width:500px;" >
                     <h5 class="mb-3"><a href="/" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>回到首頁</a></h5>
-                    <h2>購物車</h2>
-                    <div id="Cart_Content">
+                    <h2>我的訂單</h2>
+                    <div id="Order_Content">
                         
                     </div>
 
                 </div>
-                <div class="flex-column d-flex justify-content-end" style="height: 100px;">
-                    <div>
-                        <button id="goCheckout" type="button" class="btn btn-primary btn-lg">去結帳</button>
-                    </div>
-                    <br>
-                    <div>
-                        <button id="myOrder" type="button" class="btn btn-primary btn-lg">查看已下單的商品</button>
-                    </div>
 
-                  </div>
             </div>
             <div> </div>
         </div>
-        <script src="/javascripts/Cart.js"></script>
+        <script src="/javascripts/myOrder.js"></script>
     </body>
 </html>
