Convert ejs to html

--- a/public/html/MyProducts.html
+++ b/public/html/MyProducts.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>My Product 我的商品 | Yeon's Shop</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <script src="/javascripts/font-awesome.js"></script>
@@ -41,7 +42,7 @@
           </div>
           <br>
           <div>
-            <button id="myReceivedOrder"style="position:relative;width:100px;height:50px;" onclick="location.href=`./myproduct/sellerOrder`" class="btn btn-info">我收到的訂單</button>
+            <button id="myReceivedOrder"style="position:relative;width:100px;height:50px;" onclick="location.href=`./myproduct/SellerOrder`" class="btn btn-info">我收到的訂單</button>
           </div>
           <div></div>
         </div>
