--- a/public/html/Upload_Product.html
+++ b/public/html/Upload_Product.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Yeon's Shop</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <script src="/javascripts/font-awesome.js"></script>
