--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Homepage | Yeon's Shop</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/homepage.css">
