--- a/public/html/Product.html
+++ b/public/html/Product.html
@@ -45,7 +45,7 @@
       <div class="content">
         <div class="goods">
           <div
-            style="background-color:white;display:flex;flex-direction:row;margin:50px;">
+            style="background-color:white;display:flex;flex-direction:row;margin:50px;border-radius: 5px;">
             <div> <img id="Product_Image"></div>
             <div>
               <ul class="ul_Product">
