--- a/public/html/login.html
+++ b/public/html/login.html
@@ -33,8 +33,8 @@
     <div><h4 id="myproduct_userhint"></h4></div>
     <script src="/javascripts/cookie.js"></script>
     <div>
-      <div style="display:flex;justify-content:center">
-        <div style="b:solid;position:relative;height:400px;top:100px;">
+      <div style="display:flex;justify-content:center;">
+        <div style="b:solid;position:relative;height:400px;top:100px;border: 3px solid black; border-radius: 5px;background-color: rgb(222, 209, 146);">
           <h1>Login   </h1>
           <form method="POST" action="/users/login">
             <div>
