--- a/public/html/SellerOrder.html
+++ b/public/html/SellerOrder.html
@@ -13,25 +13,21 @@
     <body>
         <div>
             <div id="header">
-                <div id="title"> <a href="/" class="normaltextlink"><span
-                            style="color:aqua">Yeon's </span>Shop </a></div>
-                <div id="search">
-                    <form action="/search" method="get">
-                        <div class="searchinput">
-                            <div>
-                                <input type="text" placeholder="請輸入欲搜尋商品"
-                                    name="productName"
-                                    style="border:0px;height:25px;width:700px;z-index:-1;">
-                            </div>
-                            <div style="width:25px;height:35px;">
-                                <button type="submit"
-                                    style="padding-top:3px;padding-left:5px;padding-right:6px;padding-bottom:3px;"
-                                    class="btn btn-primary"><i class="fas
-                                        fa-search"></i></button>
-                            </div>
-                        </div>
-                    </form>
+                <div id="title"> <a href="/" class="normaltextlink"><span style="color:aqua">Yeon's  </span>Shop </a></div>
+                <div class="center_seach">
+                <div id="search"> 
+                  <form action="/search" method="get" class="form_search_width"> 
+                    <div class="searchinput">
+                      <div class="search_text_div">
+                        <input class="text_input_box" type="text" placeholder="請輸入欲搜尋商品" name="productName" style="border:0px;height:25px;z-index:-1;border-radius: 5px;">
+                      </div>
+                      <div style="width:10%;height:35px;left: 0%;position: relative;transform: translate(-50%);">
+                        <button type="submit" style="padding-top:3px;padding-left:5px;padding-right:6px;padding-bottom:3px;" class="btn btn-primary"><i class="fas fa-search"></i></button>
+                      </div>
+                    </div>
+                  </form>
                 </div>
+              </div>
                 <div class="users" id="user">
                     <div> <a href="/users/login" class="user_a">登入</a></div>
                     <div> <a href="/users/register" class="user_a">註冊 </a></div>
@@ -40,11 +36,11 @@
                 <script src="/javascripts/cookie.js"></script>
             </div><br><br>
             <div class="content">
-                <div class="goods" style="width:500px;" >
-                    <h5 class="mb-3"><a href="/" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>回到首頁</a></h5>
-                    <h2>我收到的訂單</h2>
+                <div class="goods"  >
+                    <h5 class="mb-4"><a href="/" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>回到首頁</a></h5>
+                    
                     <div id="Order_Content">
-                        
+                        <h2>我收到的訂單</h2>
                     </div>
 
                 </div>
