--- a/public/html/register.html
+++ b/public/html/register.html
@@ -14,23 +14,21 @@
   <body style="background-color: #f5f5f5;">
     <div>
       <div id="header">
-        <div id="title"> <a href="/" class="normaltextlink"><span
-              style="color:aqua">Yeon's </span>Shop </a></div>
-        <div id="search">
-          <form action="/search" method="get">
+        <div id="title"> <a href="/" class="normaltextlink"><span style="color:aqua">Yeon's  </span>Shop </a></div>
+        <div class="center_seach">
+        <div id="search"> 
+          <form action="/search" method="get" class="form_search_width"> 
             <div class="searchinput">
-              <div>
-                <input type="text" placeholder="請輸入欲搜尋商品" name="productName"
-                  style="border:0px;height:25px;width:700px;z-index:-1;">
+              <div class="search_text_div">
+                <input class="text_input_box" type="text" placeholder="請輸入欲搜尋商品" name="productName" style="border:0px;height:25px;z-index:-1;border-radius: 5px;">
               </div>
-              <div style="width:25px;height:35px;">
-                <button type="submit"
-                  style="padding-top:3px;padding-left:5px;padding-right:6px;padding-bottom:3px;"
-                  class="btn btn-primary"><i class="fas fa-search"></i></button>
+              <div style="width:10%;height:35px;left: 0%;position: relative;transform: translate(-50%);">
+                <button type="submit" style="padding-top:3px;padding-left:5px;padding-right:6px;padding-bottom:3px;" class="btn btn-primary"><i class="fas fa-search"></i></button>
               </div>
             </div>
           </form>
         </div>
+      </div>
         <div class="users">
           <div> <a href="/users/login" class="user_a">登入</a></div>
           <div> <a href="/users/register" class="user_a">註冊 </a></div>
